set google indexing

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="google-site-verification" content="t58oExH-UBarYMHiz51I3Lg_UU8lqiSbBZguK416h9A" />
     <meta
       name="description"
       content="This is a portfolio website for Benedictus Danielle"
